spacing change fix

--- a/assets/public/css/backend.css
+++ b/assets/public/css/backend.css
@@ -1211,6 +1211,11 @@ div.margin-xl {
     width: 35rem;
   }
 }
+@media (max-width: 1199.5px) {
+  .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
+    height: 55rem;
+  }
+}
 @media (max-width: 797.5px) {
   .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
     width: 38rem;
@@ -1227,7 +1232,7 @@ div.margin-xl {
 }
 @media (max-width: 1199.5px) {
   .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article a {
-    padding: 5rem;
+    padding: 4rem;
   }
 }
 .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article a:before {
