--- a/assets/public/css/frontend.css
+++ b/assets/public/css/frontend.css
@@ -5280,6 +5280,11 @@ textarea {
     width: 35rem;
   }
 }
+@media (max-width: 1199.5px) {
+  .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
+    height: 55rem;
+  }
+}
 @media (max-width: 797.5px) {
   .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
     width: 38rem;
@@ -5296,7 +5301,7 @@ textarea {
 }
 @media (max-width: 1199.5px) {
   .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article a {
-    padding: 5rem;
+    padding: 4rem;
   }
 }
 .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article a:before {
